--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -196,6 +196,7 @@ INSTALLED_APPS = (
     'django.contrib.redirects',
 
     'prometeo.core',
+    'prometeo.core.filebrowser',
     'prometeo.core.widgets',
     'prometeo.core.menus',
     'prometeo.core.auth',
