Added new templatetags to render a customizable file browser.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@583 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/filebrowser.css
+++ b/themes/default/static/css/filebrowser.css
@@ -22,7 +22,7 @@
 
 .filebrowser th.char { width: 37.5%; }
 
-.filebrowser th.filesize { width: 10%; }
+.filebrowser th.size { width: 10%; }
 
 .filebrowser span.folder,
 .filebrowser span.file {
