Added proof of concept of the new "documents" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@597 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -209,6 +209,7 @@ INSTALLED_APPS = (
     #'prometeo.todo',
     #'prometeo.addressing',
     #'prometeo.partners',
+    #'prometeo.documents',
     #'prometeo.projects',
 )
 
@@ -250,6 +251,7 @@ SEARCH_IN_MODELS = (
     #'addressing.PhoneNumber',
     #'partners.Contact',
     #'partners.Partner',
+    #'documents.Document',
     #'projects.Project',
     #'projects.Area',
     #'projects.Milestone',
