Added proof of concept of "products" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@601 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -239,6 +239,7 @@ td.number { text-align: right; }
 td .actions {
     float: right;
     margin-right: -10px;
+    margin-left: 10px;
 }
 
 td .yes, td .no {
