Added proof of concept of "stock" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@603 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -211,6 +211,7 @@ INSTALLED_APPS = (
     #'prometeo.partners',
     #'prometeo.documents',
     #'prometeo.products',
+    #'prometeo.stock',
     #'prometeo.projects',
 )
 
@@ -255,6 +256,8 @@ SEARCH_IN_MODELS = (
     #'documents.Document',
     #'products.Product',
     #'products.Supply',
+    #'stock.Warehouse',
+    #'stock.Movement',
     #'projects.Project',
     #'projects.Area',
     #'projects.Milestone',
