Added "status" field to the "Document" model.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@604 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -501,6 +501,17 @@ ROLES = (
 DEFAULT_ROLE = 'EMPLOYEE'
 """
 
+# Documents management options.
+"""
+DOCUMENT_STATUS_CHOICES = (
+    ('DRAFT', _('draft')),
+    ('CONFIRMED', _('confirmed')),
+    ('REVIEWED', _('reviewed')),
+)
+
+DOCUMENT_DEFAULT_STATUS = 'DRAFT'
+"""
+
 # Products management options.
 """
 PRODUCT_UOM_CHOICES = (
