Added preliminary support for delivery notes.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@609 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -104,8 +104,9 @@ form select {
 }
 
 form textarea {
-    width: 92%;
-    height: 250px;
+    width: 93%;
+    height: 150px;
+    max-width: 798px;
     padding: 2px;
 }
 
