--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -604,6 +604,44 @@ PRODUCT_DEFAULT_PAYMENT_TERMS = 30
 PRODUCT_DEFAULT_WARRANTY_PERIOD = 730
 """
 
+# Stock management options.
+"""
+MEANS_OF_DELIVERY = (
+    ('SENDER', _('sender')),
+    ('ADDRESSEE', _('addressee')),
+    ('CARRIER', _('carrier')),
+)
+
+DEFAULT_MEAN_OF_DELIVERY = 'CARRIER'
+
+TERMS_OF_PAYMENT = (
+    ('30', _('30')),
+    ('60', _('60')),
+    ('90', _('90')),
+)
+
+DEFAULT_TERMS_OF_PAYMENT = '30'
+
+REASONS_OF_SHIPPING = (
+    ('SAMPLES', _('samples')),
+)
+
+DEFAULT_REASON_OF_SHIPPING = 'SAMPLES'
+
+TERMS_OF_SHIPPING = (
+    ('CARRIAGEPAYED', _('carriage payed')),
+    ('RETOURN', _('retourn')),
+)
+
+DEFAULT_TERMS_OF_SHIPPING = 'CARRIAGEPAYED'
+
+GOODS_APPEARANCES = (
+    ('BOX', _('box')),
+)
+
+DEFAULT_GOODS_APPEARANCE = 'BOX'
+"""
+
 # Project management options.
 """
 PROJECT_STATUS_CHOICES = (
