Added "notes" field to the "ProductEntry" model.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@617 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/stock/delivery_note_edit.html
+++ b/themes/default/templates/stock/delivery_note_edit.html
@@ -50,7 +50,7 @@
         <tr>
             {% for field in form.visible_fields %}
             {% if not forloop.last %}
-            <th{% if field.name != 'product' %} class="char"{% endif %}>{{ field.label }}</th>
+            <th {% if field.name == 'notes' %}class="text"{% else %}class="char"{% endif %}>{{ field.label }}</th>
             {% endif %}
             {% endfor %}
             <th class="actions">{% trans "Delete?" %}</th>
