--- a/themes/default/templates/stock/delivery_note_edit.html
+++ b/themes/default/templates/stock/delivery_note_edit.html
@@ -40,7 +40,7 @@
     {% csrf_token %}
     <table class="properties">
         {% property_table dform "['code', ['owner', 'status']]" %}
-        {% property_table form "[['delivery_addressee', 'invoice_addressee'], ['order_ref_number', 'order_ref_date'], ['means_of_delivery', 'terms_of_payment'], ['reason_of_shipping', 'terms_of_shipping'], 'goods_appearance', 'notes']" %}
+        {% property_table form "[['invoice_addressee', 'delivery_addressee'], ['order_ref_number', 'order_ref_date'], ['means_of_delivery', 'terms_of_payment'], ['reason_of_shipping', 'terms_of_shipping'], ['goods_appearance', 'delivery_date'], 'notes']" %}
         {% property_table dform "['categories', 'tags']" %}
     </table>
     {{ formset.management_form }}
