--- a/themes/default/templates/stock/deliverynote_delete.html
+++ b/themes/default/templates/stock/deliverynote_delete.html
@@ -7,8 +7,7 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
-    {% add_crumb 'Warehouses' 'warehouse_list' %}
-    {% add_crumb 'Delivery notes' 'delivery_note_list' %}
+    {% add_crumb 'Delivery notes' 'deliverynote_list' %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Delete' %}
 {% endblock %}
@@ -21,7 +20,7 @@
 {% endblock %}
 
 {% block main %}
-<form method="post" action="{% url delivery_note_delete object.pk %}">
+<form method="post" action="{% url deliverynote_delete object.pk %}">
     {% csrf_token %}
     <p>{% trans "Are you sure you want to delete this delivery note?" %}</p>
     <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
