Improved hard copies management for delivery notes.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@624 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/stock/deliverynote_hardcopies.html
+++ b/themes/default/templates/stock/deliverynote_hardcopies.html
@@ -26,7 +26,7 @@
     </ul>
 </div>
 <div class="details">
-    {% detail_table object_list field_names %}
+    {% detail_table object.hardcopy_set.all field_names %}
     {% include "elements/paginator.html" %}
 </div>
 {% endblock %}
