--- a/themes/default/templates/stock/deliverynote_detail.html
+++ b/themes/default/templates/stock/deliverynote_detail.html
@@ -44,7 +44,10 @@
         {% endif %}
     </ul>
 </div>
+{% objects_from object %}
+{% with objects as object_list %}
 {% include 'elements/navigator.html' %}
+{% endwith %}
 <div class="sections">   
     <div class="menu">
         {% menu "deliverynote_menu" %}
