Fixed hard copy upload.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@625 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/stock/deliverynote_edit_hardcopy.html
+++ b/themes/default/templates/stock/deliverynote_edit_hardcopy.html
@@ -34,9 +34,9 @@
 
 {% block main %}
 {% if object.pk %}
-<form method="post" action="{% url deliverynote_edit_hardcopy object.document.object_id object.pk %}">
+<form enctype="multipart/form-data" method="post" action="{% url deliverynote_edit_hardcopy object.document.object_id object.pk %}">
 {% else %}
-<form method="post" action="{% url deliverynote_add_hardcopy object.document.object_id %}">
+<form enctype="multipart/form-data" method="post" action="{% url deliverynote_add_hardcopy object.document.object_id %}">
 {% endif %}
     {% csrf_token %}
     <table class="properties">
