Added proof of concept of "accounting" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@640 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -212,6 +212,7 @@ INSTALLED_APPS = (
     #'prometeo.documents',
     #'prometeo.products',
     #'prometeo.stock',
+    #'prometeo.accounting',
     #'prometeo.projects',
 )
 
@@ -258,6 +259,7 @@ SEARCH_IN_MODELS = (
     #'products.Supply',
     #'stock.Warehouse',
     #'stock.Movement',
+    #'accounting.BankAccount',
     #'projects.Project',
     #'projects.Area',
     #'projects.Milestone',
