--- a/themes/default/static/css/blitzer/jquery-ui-1.8.16.custom.css
+++ b/themes/default/static/css/blitzer/jquery-ui-1.8.16.custom.css
@@ -89,14 +89,14 @@
 ----------------------------------*/
 
 /* states and images */
-.ui-icon { width: 16px; height: 16px; background-image: url(images/ui-icons_cc00.0.556x240.png); }
-.ui-widget-content .ui-icon {background-image: url(images/ui-icons_cc00.0.556x240.png); }
+.ui-icon { width: 16px; height: 16px; background-image: url(images/ui-icons_cc0000_256x240.png); }
+.ui-widget-content .ui-icon {background-image: url(images/ui-icons_cc0000_256x240.png); }
 .ui-widget-header .ui-icon {background-image: url(images/ui-icons_ffffff_256x240.png); }
-.ui-state-default .ui-icon { background-image: url(images/ui-icons_cc00.0.556x240.png); }
-.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(images/ui-icons_cc00.0.556x240.png); }
-.ui-state-active .ui-icon {background-image: url(images/ui-icons_cc00.0.556x240.png); }
+.ui-state-default .ui-icon { background-image: url(images/ui-icons_cc0000_256x240.png); }
+.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(images/ui-icons_cc0000_256x240.png); }
+.ui-state-active .ui-icon {background-image: url(images/ui-icons_cc0000_256x240.png); }
 .ui-state-highlight .ui-icon {background-image: url(images/ui-icons_004276_256x240.png); }
-.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(images/ui-icons_cc00.0.556x240.png); }
+.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(images/ui-icons_cc0000_256x240.png); }
 
 /* positioning */
 .ui-icon-carat-1-n { background-position: 0 0; }
