Using "folder" term everywhere (instead of "directory").
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@655 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/filebrowser/delete.html
+++ b/themes/default/templates/filebrowser/delete.html
@@ -23,8 +23,8 @@
         {% if fileinfo.is_link %}
         <p>{% trans "Are you sure you want to delete this link?" %}</p>
         {% else %}
-        {% if fileinfo.is_directory %}
-        <p>{% trans "Are you sure you want to delete this directory?" %}</p>
+        {% if fileinfo.is_folder %}
+        <p>{% trans "Are you sure you want to delete this folder?" %}</p>
         {% else %}
         <p>{% trans "Are you sure you want to delete this file?" %}</p>
         {% endif %}
