--- a/themes/default/templates/filebrowser/mkdir.html
+++ b/themes/default/templates/filebrowser/mkdir.html
@@ -11,10 +11,10 @@
     {% include "filebrowser/parent.html" %}
     {% add_crumb fileinfo.name fileinfo.url %}
     {% endif %}
-    {% add_crumb 'Add directory' %}
+    {% add_crumb 'Add folder' %}
 {% endblock %}
 
-{% block subtitle %}{% trans "Add directory" %}{% endblock %}
+{% block subtitle %}{% trans "Add folder" %}{% endblock %}
 
 {% block main %}
 <div class="details">
