A small fix to the layout of milestone list.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@656 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -436,6 +436,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     float: left;
     width: 50%;
     background: #f2f2f2 url(images/bg_progressbar_right.jpg) no-repeat right center;
+    margin-right: 100%;
 }
 
 .progressbar p { display: none; }
