Added support for theme-based localization.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@657 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -73,6 +73,11 @@ USE_I18N = True
 # calendars according to the current locale
 USE_L10N = True
 
+# A tuple of directories where Django looks for translation files.
+LOCALE_PATHS = (
+    os.path.join(THEME_PATH, 'locale'),
+)
+
 # Absolute filesystem path to the directory that will hold user-uploaded files.
 # Example: "/home/media/media.lawrence.com/media/"
 MEDIA_ROOT = PROJECT_PATH + '/media/'
