Fixed style for JSON field.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@660 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -124,6 +124,7 @@ form .submit {
 }
 
 form .help_text {
+    clear: both;
     display: block;
     color: #c0c0c0;
     font-style: italic;
@@ -155,14 +156,16 @@ form .add a { margin-top: 4px; }
 form .add .multiple a { margin-top: 0; }
 
 form .json-key {
+    clear: left;
     float: left;
-    width: 100px; 
+    width: 100px;
     margin-right: 0;
 }
 
 form .json-val {
     clear: none;
-    width: 160px; 
+    float: left;
+    width: 160px;
     margin-right: 0;
 }
 
