--- a/themes/default/templates/widgets/widget_delete.html
+++ b/themes/default/templates/widgets/widget_delete.html
@@ -3,20 +3,20 @@
 {% load i18n %}
 {% load breadcrumbs %}
 
-{% block meta_title %}{{ object }}{% endblock %}
+{% block meta_title %}{{ object.title }}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Users' 'user_list' %}
     {% add_crumb user user.get_absolute_url %}
     {% add_crumb 'Widgets' '/' %}
-    {% add_crumb object object.get_absolute_url %}
+    {% add_crumb object.title object.get_absolute_url %}
     {% add_crumb 'Delete' %}
 {% endblock %}
 
 {% block title %}
 <div class="title">
-    <h1>{{ object }}</h1>
+    <h1>{{ object.title }}</h1>
     <h2>{% trans 'Delete' %}</h2>
 </div>
 {% endblock %}
