- Added new view "document_print" which provides a standard way to print a PDF from a "Document" model based on a custom template. - Added new action "print" to the detail page of the "DeliveryNote" and "SalesInvoice" models.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@666 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -355,7 +355,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 .add a, .edit a, .delete a, .all a, .import a, .export a,
 .open a, .reopen a, .close a, .view a, .exit a, .follow a, .leave a,
-.move a, .copy a, .add_link a, .refresh a {
+.move a, .copy a, .add_link a, .refresh a, .print a {
     float: left;
     width: 16px;
     height: 16px;
@@ -433,6 +433,10 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 .refresh a { background-image: url(images/refresh.png); }
 
 .refresh a:hover { background-image: url(images/refresh_hover.png); }
+
+.print a { background-image: url(images/print.png); }
+
+.print a:hover { background-image: url(images/print_hover.png); }
 
 .progressbar {
     clear: both;
