--- a/themes/default/templates/accounting/salesinvoice_detail.html
+++ b/themes/default/templates/accounting/salesinvoice_detail.html
@@ -36,6 +36,9 @@
         <li class="all"><a title="{% trans 'All' %}" href="{% url salesinvoice_list %}">{% trans 'All' %}</a></li>
         {% endif %}
         {% if perms.accounting.change_salesinvoice %}
+        <li class="print"><a title="{% trans 'Print' %}" href="{% url document_print object.pk %}">{% trans 'Print' %}</a></li>
+        {% endif %}
+        {% if perms.accounting.change_salesinvoice %}
         {% if user not in object.stream.followers.all %}
         <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
         {% else %}
