- Moved "set_language" view from "core.auth.views" to "core.views". - Added "lang" argument to "set_language" and "document_print" views. - Added support for localized document printing.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@668 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/stock/deliverynote_detail.html
+++ b/themes/default/templates/stock/deliverynote_detail.html
@@ -36,7 +36,7 @@
         <li class="all"><a title="{% trans 'All' %}" href="{% url deliverynote_list %}">{% trans 'All' %}</a></li>
         {% endif %}
         {% if perms.stock.change_deliverynote %}
-        <li class="print"><a title="{% trans 'Print' %}" href="{% url document_print object.pk %}">{% trans 'Print' %}</a></li>
+        <li class="print"><a title="{% trans 'Print' %}" href="{% url document_print object.pk object.content_object.invoice_addressee.language %}">{% trans 'Print' %}</a></li>
         {% endif %}
         {% if perms.stock.change_deliverynote %}
         {% if user not in object.stream.followers.all %}
