Improved product entry and movement management and rendering.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@680 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/stock/movement_detail.html
+++ b/themes/default/templates/stock/movement_detail.html
@@ -40,7 +40,9 @@
 {% include 'elements/navigator.html' %}
 <div class="details">
     <table class="properties">
-        {% property_table object "[['author', 'created'], ['origin', 'destination'], ['product_entry', 'value']]" %}
+        {% property_table object "[['author', 'created'], ['origin', 'destination']]" %}
+        {% property_table object.product_entry "['product', ['quantity', 'unit_price'], ['tax', 'discount']]" %}
+        {% property_table object "['value']" %}
     </table>
 </div>
 {% endblock %}
