Fixed navigator in the "warehouse_movements.html" template.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@681 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/stock/warehouse_detail.html
+++ b/themes/default/templates/stock/warehouse_detail.html
@@ -46,7 +46,10 @@
         {% endif %}
     </ul>
 </div>
+{% objects_from object %}
+{% with objects as object_list %}
 {% include 'elements/navigator.html' %}
+{% endwith %}
 <div class="sections">   
     <div class="menu">
         {% menu "warehouse_menu" %}
