- Improved report management with a proof of concept of report templates. - Fixed localization of "stock" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@682 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -29,6 +29,7 @@ from django.utils.translation import ugettext_lazy as _
 
 PROJECT_PATH = os.path.normpath(os.path.join(os.path.dirname(os.path.abspath(__file__)), os.path.pardir))
 THEME_PATH = os.path.join(PROJECT_PATH, 'themes', 'default')
+REPORT_PATH = os.path.join(PROJECT_PATH, 'reports', 'default')
 
 DEBUG = True
 
@@ -187,6 +188,7 @@ LOGGING = {
 # List of search path for templates.
 TEMPLATE_DIRS = (
     (os.path.join(THEME_PATH, "templates")),
+    (os.path.join(REPORT_PATH, "templates")),
 )
 
 # List of installed applications.
